data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2867.wast
;; 6. **Function with Intermediate Label and `br_if` Termination**:    - Write a function containing labels with intermediate positions and conditional branches (`br_if`) ending with a return. Verify if the label stack transitions correctly during the return.    - **Reasoning**: Ensures that context transitions are managed accurately around return instructions, avoiding faulty label stack state transitions.

(assert_invalid
  (module
    (func $func_with_br_if_termination (result i32)
      (block $label1
        (i32.const 1)
        (br_if $label1 (i32.const 0))
        (return)
      )
    )
  )
  "type mismatch"
)